2012-07-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/trie.h, datrie/trie.c (trie_state_walkable_chars):
	Reformat source.

2012-07-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add new API trie_state_walkable_chars() to allow breadth-first
	traversal.

	* datrie/darray.h, datrie/darray.c:
	  - Move da_output_symbols() to darray.h, to be called by the new
	    function.
	  - Move the Symbols class to darray.h, as required by
	    da_output_symbols().
	* datrie/trie.h, datrie/trie.c (+trie_state_walkable_chars):
	  - Add the new public function.
	* datrie/libdatrie.map, datrie/libdatrie.def:
	  - Add the new symbol to export maps.
	* configure.ac:
	  - Update library versioning to reflect API addition.

2012-07-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* darray/darray.c (da_has_children): Accept (const DArray *) arg.

2012-07-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/darray.c (da_has_children, da_output_symbols,
	  da_relocate_base):
	Calculate max_c candidate using num_cells - base instead of
	TRIE_INDEX_MAX - base, to prevent more unnecessary loops.

2012-07-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/trie.c (trie_state_get_data):
	Check if the state is leaf, not just suffix, before getting data.

	Thanks Mikhail Korobov <kmike84@gmail.com> for the report.

2012-07-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/tail.h, datrie/tail.c:
	* datrie/alpha-map.c:
	* datrie/trie.h, datrie/trie.c:
	* datrie/darray.c: Remove trailing spaces.

2012-07-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/tail.c (tail_get_suffix): Fix function documentation.

	Thanks Mikhail Korobov <kmike84@gmail.com> for the report.

2012-07-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/darray.c, datrie/tail.c:
	  - Don't include <stdint.h> when compiled with MSVC, as the header is
	    missing there, and SIZE_MAX is provided in some other header.
